force-app/main/default/objects/ESCIncentive__c/ESCIncentive__c.object-meta.xml
<CustomObject>
    <description>Objet référentiel pour le calcul de la prime écologique CEE</description>
    <label>Incentive CEE</label>
    <nameField>
        <displayFormat>ICEE/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentives CEE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>