force-app/main/default/objects/ESCIncentive__c/fields/customerAmount__c.field-meta.xml
<CustomField>
    <fullName>customerAmount__c</fullName>
    <label>Montant remboursé</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>