force-app/main/default/objects/ESCIncentive__c/fields/geographicSector__c.field-meta.xml
<CustomField>
    <fullName>geographicSector__c</fullName>
    <label>Secteur géographique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>