force-app/main/default/objects/ESCIncentive__c/fields/geography__c.field-meta.xml
<CustomField>
    <fullName>geography__c</fullName>
    <label>Zone géographique</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>