force-app/main/default/objects/ESCIncentive__c/fields/heatingModes__c.field-meta.xml
<CustomField>
    <fullName>heatingModes__c</fullName>
    <label>Mode de chauffage</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>heatingModes</valueSetName>
    </valueSet>
</CustomField>