force-app/main/default/objects/ESCIncentive__c/fields/incomeType__c.field-meta.xml
<CustomField>
    <fullName>incomeType__c</fullName>
    <label>Type de revenus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>