force-app/main/default/objects/ESCIncentive__c/fields/KparKReference__c.field-meta.xml
<CustomField>
    <fullName>KparKReference__c</fullName>
    <externalId>true</externalId>
    <label>Référence</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>