force-app/main/default/objects/ESCIncentive__c/fields/maxIncomes__c.field-meta.xml
<CustomField>
    <fullName>maxIncomes__c</fullName>
    <label>Revenus maximums</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>