force-app/main/default/objects/ESCIncentive__c/fields/minIncomes__c.field-meta.xml
<CustomField>
    <fullName>minIncomes__c</fullName>
    <label>Revenus minimums</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>