force-app/main/default/objects/ESCIncentive__c/fields/officialAmount__c.field-meta.xml
<CustomField>
    <fullName>officialAmount__c</fullName>
    <label>Montant officiel</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>