force-app/main/default/objects/ESCIncentive__c/fields/personNumber__c.field-meta.xml
<CustomField>
    <fullName>personNumber__c</fullName>
    <label>Nombre de personnes</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>