force-app/main/default/objects/ESCIncentive__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <defaultValue>&quot;Provisionné&quot;</defaultValue>
    <label>Statut</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Active</valueSetName>
    </valueSet>
</CustomField>