force-app/main/default/objects/ESCIncentive__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <defaultValue>&quot;Menuiserie&quot;</defaultValue>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ESCType</valueSetName>
    </valueSet>
</CustomField>