force-app/main/default/objects/ESCIncentive__c/validationRules/VR_K3_ESCIncentive_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_ESCIncentive_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp; customerAmount__c &lt; 0 &amp;&amp; customerAmount__c &lt;= officialAmount__c</errorConditionFormula>
    <errorDisplayField>customerAmount__c</errorDisplayField>
    <errorMessage>Montant de la prime CEE invalide (doit être supérieur ou égal à 0 et inférieur ou égal au montant officiel)!</errorMessage>
</ValidationRule>