force-app/main/default/objects/ESCIncentive__c/validationRules/VR_K3_ESCIncentive_MaxIncomes.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_ESCIncentive_MaxIncomes</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
maxIncomes__c &lt; minIncomes__c</errorConditionFormula>
    <errorDisplayField>maxIncomes__c</errorDisplayField>
    <errorMessage>Revenus minimums invalides (doit être supérieur ou égal aux revenus minimums)!</errorMessage>
</ValidationRule>