force-app/main/default/objects/ESCIncentive__c/validationRules/VR_K3_ESCIncentive_MinIncomes.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_ESCIncentive_MinIncomes</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
minIncomes__c &lt; 0</errorConditionFormula>
    <errorDisplayField>minIncomes__c</errorDisplayField>
    <errorMessage>Revenus minimums invalides (doit être supérieur ou égal à 0)!</errorMessage>
</ValidationRule>