force-app/main/default/objects/ESCIncentive__c/validationRules/VR_K3_ESCIncentive_OfficialAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_ESCIncentive_OfficialAmount</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
officialAmount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>officialAmount__c</errorDisplayField>
    <errorMessage>Montant de la prime CEE invalide (doit être supérieur ou égal à 0)!</errorMessage>
</ValidationRule>