force-app/main/default/objects/ESCIncentive__c/validationRules/VR_K3_ESCIncentive_PersonNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_ESCIncentive_PersonNumber</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
personNumber__c &lt; 0</errorConditionFormula>
    <errorDisplayField>personNumber__c</errorDisplayField>
    <errorMessage>Nombre de personnes invalide (doit être supérieur ou égal à 0)!</errorMessage>
</ValidationRule>