force-app/main/default/objects/ESCIncentive__c/validationRules/VR_K3_ESCIncentive_ValidityPeriod.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_ESCIncentive_ValidityPeriod</fullName>
    <active>true</active>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
startDate__c &gt; endDate__c</errorConditionFormula>
    <errorDisplayField>endDate__c</errorDisplayField>
    <errorMessage>Date de fin de validité incorrecte (doit être être postérieure à la date de début de validité)!</errorMessage>
</ValidationRule>